RESOLVED FIXED 255976
AX: Remove 5 AXIsolatedObject ASSERT_NOT_REACHED implementations
https://bugs.webkit.org/show_bug.cgi?id=255976
Summary AX: Remove 5 AXIsolatedObject ASSERT_NOT_REACHED implementations
Tyler Wilcock
Reported 2023-04-26 00:41:10 PDT
...
Attachments
Patch (11.28 KB, patch)
2023-04-26 00:44 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-04-26 00:41:24 PDT
Tyler Wilcock
Comment 2 2023-04-26 00:44:39 PDT
EWS
Comment 3 2023-04-26 11:52:46 PDT
Committed 263423@main (5e7a7906ad07): <https://commits.webkit.org/263423@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466093 [details].
Note You need to log in before you can comment on or make changes to this bug.