AX: Remove 5 AXIsolatedObject ASSERT_NOT_REACHED implementations https://bugs.webkit.org/show_bug.cgi?id=255976 rdar://problem/108545318

Reviewed by Chris Fleizach.

* Source/WebCore/accessibility/AccessibilityListBox.h:
(isType):
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
(isType):
* Source/WebCore/accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isAccessibilityNodeObject const):
(WebCore::AccessibilityObject::isAccessibilityListBoxInstance const):
(WebCore::AccessibilityObject::boundsForVisiblePositionRange const):
* Source/WebCore/accessibility/AccessibilityObjectInterface.h:
(WebCore::AXCoreObject::performDefaultAction):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::boundsForVisiblePositionRange const): Deleted.
(WebCore::AXIsolatedObject::performDefaultAction): Deleted.
(WebCore::AXIsolatedObject::isAccessibilityNodeObject const): Deleted.
(WebCore::AXIsolatedObject::isAccessibilityListBoxInstance const): Deleted.
(WebCore::AXIsolatedObject::supportsPressed const): Deleted.
* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:

Canonical link: https://commits.webkit.org/263423@main