Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h
@@ -366,7 +366,6 @@ private:
     AXTextMarkerRange textMarkerRangeForNSRange(const NSRange&) const override;
 #endif
     String stringForRange(const SimpleRange&) const override;
-    IntRect boundsForVisiblePositionRange(const VisiblePositionRange&) const override;
     IntRect boundsForRange(const SimpleRange&) const override;
     VisiblePosition visiblePositionForPoint(const IntPoint&) const override;
     VisiblePosition nextLineEndPosition(const VisiblePosition&) const override;
@@ -412,18 +411,15 @@ private:
     bool insertText(const String&) override;
     void makeRangeVisible(const PlainTextRange&) override;
     bool press() override;
-    bool performDefaultAction() override;
 
     bool isAccessibilityObject() const override { return false; }
 
     // Functions that should never be called on an isolated tree object. ASSERT that these are not reached;
-    bool isAccessibilityNodeObject() const override;
     bool isAccessibilityRenderObject() const override;
     bool isAccessibilityTableInstance() const override;
     bool isAccessibilityARIAGridInstance() const override { return false; }
     bool isAccessibilityARIAGridRowInstance() const override { return false; }
     bool isAccessibilityARIAGridCellInstance() const override { return false; }
-    bool isAccessibilityListBoxInstance() const override;
 
     bool isNativeTextControl() const override;
     bool isListBoxOption() const override;
@@ -452,7 +448,6 @@ private:
     AccessibilityChildrenVector relatedObjects(AXRelationType) const override;
 
     bool supportsHasPopup() const override;
-    bool supportsPressed() const override;
     bool supportsPressAction() const final { return boolAttributeValue(AXPropertyName::SupportsPressAction); }
     bool supportsChecked() const override;
     bool isModalNode() const override;
